@startuml Database Schema

!define table(x) class x << (T,#FFAAAA) >>
hide methods
hide stereotypes

title Course Enrollment System - Database Schema

table(users) {
    **id** : BIGINT <<PK>>
    --
    username : VARCHAR(255) UNIQUE
    email : VARCHAR(255) UNIQUE
    password_hash : VARCHAR(255)
    enabled : BOOLEAN
    approved : BOOLEAN
    account_non_expired : BOOLEAN
    credentials_non_expired : BOOLEAN
    account_non_locked : BOOLEAN
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

table(profiles) {
    **id** : BIGINT <<PK>>
    --
    first_name : VARCHAR(100)
    last_name : VARCHAR(100)
    bio : TEXT
    phone : VARCHAR(20)
    address : VARCHAR(255)
    account_id : BIGINT <<FK>>
}

table(roles) {
    **id** : INTEGER <<PK>>
    --
    name : VARCHAR(50) UNIQUE
}

table(user_roles) {
    user_id : BIGINT <<FK>>
    role_id : INTEGER <<FK>>
    --
    <<PK (user_id, role_id)>>
}

table(courses) {
    **id** : BIGINT <<PK>>
    --
    code : VARCHAR(20) UNIQUE
    name : VARCHAR(255)
    credits : INTEGER
    capacity : INTEGER
    description : TEXT
    enabled : BOOLEAN
}

table(enrollments) {
    **id** : BIGINT <<PK>>
    --
    student_id : BIGINT <<FK>>
    course_id : BIGINT <<FK>>
    status : VARCHAR(20)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

table(classrooms) {
    **id** : BIGINT <<PK>>
    --
    code : VARCHAR(50)
    teacher_id : BIGINT <<FK>>
    course_id : BIGINT <<FK>>
    start_date : DATE
    end_date : DATE
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

table(schedules) {
    **id** : BIGINT <<PK>>
    --
    classroom_id : BIGINT <<FK>>
    day_of_week : VARCHAR(20)
    start_time : TIME
    end_time : TIME
}

users "1" -- "1" profiles
users "1" -- "0..*" user_roles
roles "1" -- "0..*" user_roles
users "1" -- "0..*" enrollments : student_id
courses "1" -- "0..*" enrollments
users "1" -- "0..*" classrooms : teacher_id
courses "1" -- "0..*" classrooms
classrooms "1" -- "0..*" schedules

@enduml
